backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mates-app
  labels:
    service: backend
spec:
  ports:
    - port: 8000
  selector:
    service: backend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mates-app
  labels:
    service: backend
spec:
  replicas: 4
  selector: 
    matchLabels: 
      service: backend
  template:
    metadata:
      labels:
        service: backend
    spec:
      imagePulSecrets:
        - name: dockerhub-secret
      containers:
      - name: backend
        image: 3omar0/mates:dev-17168e6
        ports:
        - containerPort: 8000
