gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mates-gateway
  namespace: mates-app
spec:
  gatewayClassName: traefik
  listeners:
  - protocol: HTTP
    port: 80
    name: web
    allowedRoutes:
        namespaces:
          from: Same

  - protocol: HTTPS
    port: 443
    name: websecure
    allowedRoutes:
        namespaces:
          from: Same
    tls:
      mode: Terminate
      certificateRefs:
        - name: gw-cert

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mates-app
  namespace: mates-app
spec:
  parentRefs:
  - name: mates-gateway

  hostnames:
    - mates.kube.local

  rules:
    - backendRefs:
        - kind: Service
          name: front-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

    - backendRefs:
        - kind: Service
          name: backend
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /ws
